Committed all project files with changes and unversioned files 25/06/2023

--- a/Reports/MyStoreTestReport-2023.28.23.02.28.28.html
+++ b/Reports/MyStoreTestReport-2023.28.23.02.28.28.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">MystoreV1 Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 1, 2023 08:55:50 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 23, 2023 02:28:28 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">verifyBuyProduct</p>
+            <p class="name">verifyUserRegistration</p>
             <p class="text-sm">
-              <span>8:56:30 PM</span> / <span>00:00:00:014</span>
+              <span>2:28:49 PM</span> / <span>00:00:00:010</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">verifyBuyProduct</h5>
-<span class='badge badge-success'>05.01.2023 8:56:30 PM</span>
-<span class='badge badge-danger'>05.01.2023 8:56:30 PM</span>
-<span class='badge badge-default'>00:00:00:014</span>
+<h5 class="test-status text-pass">verifyUserRegistration</h5>
+<span class='badge badge-success'>06.23.2023 2:28:49 PM</span>
+<span class='badge badge-danger'>06.23.2023 2:28:49 PM</span>
+<span class='badge badge-default'>00:00:00:010</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,9 +104,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:56:30 PM</td>
+        <td>2:28:49 PM</td>
         <td>
-          <span class='badge white-text green'>Name of the passed test case is: verifyBuyProduct</span>
+          <span class='badge white-text green'>Name of the passed test case is: verifyUserRegistration</span>
         </td>
       </tr>
   </tbody>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 1, 2023 08:55:50 PM</h3>
+<h3>Jun 23, 2023 02:28:28 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 1, 2023 08:56:31 PM</h3>
+<h3>Jun 23, 2023 02:28:49 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"verifyBuyProduct":0.014
+"verifyUserRegistration":0.01
 };
 </script>
 <div class="row">
