--- a/Reports/MyStoreTestReport-2023.16.25.05.16.13.html
+++ b/Reports/MyStoreTestReport-2023.16.25.05.16.13.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">MystoreV1 Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 4, 2023 09:34:39 AM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 25, 2023 05:16:13 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">verifyBuyProduct</p>
+            <p class="name">verifyLogin</p>
             <p class="text-sm">
-              <span>9:35:14 AM</span> / <span>00:00:00:009</span>
+              <span>5:16:24 PM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">verifyBuyProduct</h5>
-<span class='badge badge-success'>05.04.2023 9:35:14 AM</span>
-<span class='badge badge-danger'>05.04.2023 9:35:14 AM</span>
-<span class='badge badge-default'>00:00:00:009</span>
+<h5 class="test-status text-pass">verifyLogin</h5>
+<span class='badge badge-success'>06.25.2023 5:16:24 PM</span>
+<span class='badge badge-danger'>06.25.2023 5:16:24 PM</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,9 +104,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:35:14 AM</td>
+        <td>5:16:24 PM</td>
         <td>
-          <span class='badge white-text green'>Name of the passed test case is: verifyBuyProduct</span>
+          <span class='badge white-text green'>Name of the passed test case is: verifyLogin</span>
         </td>
       </tr>
   </tbody>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 4, 2023 09:34:39 AM</h3>
+<h3>Jun 25, 2023 05:16:13 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 4, 2023 09:35:14 AM</h3>
+<h3>Jun 25, 2023 05:16:25 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"verifyBuyProduct":0.009
+"verifyLogin":0
 };
 </script>
 <div class="row">
