--- a/Reports/MyStoreTestReport-2023.36.25.10.36.52.html
+++ b/Reports/MyStoreTestReport-2023.36.25.10.36.52.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">MystoreV1 Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 1, 2023 09:04:13 AM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 25, 2023 10:36:52 AM</span></a>
 </li>
 </ul>
 </div>
@@ -66,7 +66,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
+<a class="dropdown-item" status="skip" href="#"><span>Skip</span><span class="status warning"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -74,25 +74,25 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="1"
+        <li class="test-item"  status="skip" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">verifyBuyProduct</p>
+            <p class="name">verifyUserRegistration</p>
             <p class="text-sm">
-              <span>9:04:37 AM</span> / <span>00:00:00:004</span>
-              <span class="badge fail-bg log float-right">Fail</span>
+              <span>10:37:05 AM</span> / <span>00:00:00:010</span>
+              <span class="badge skip-bg log float-right">Skip</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">verifyBuyProduct</h5>
-<span class='badge badge-success'>06.01.2023 9:04:37 AM</span>
-<span class='badge badge-danger'>06.01.2023 9:04:37 AM</span>
-<span class='badge badge-default'>00:00:00:004</span>
+<h5 class="test-status text-skip">verifyUserRegistration</h5>
+<span class='badge badge-success'>06.25.2023 10:37:05 AM</span>
+<span class='badge badge-danger'>06.25.2023 10:37:05 AM</span>
+<span class='badge badge-default'>00:00:00:010</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -103,10 +103,10 @@
   <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
   <tbody>
       <tr class="event-row">
-        <td><span class="badge log fail-bg">Fail</span></td>
-        <td>9:04:37 AM</td>
+        <td><span class="badge log skip-bg">Skip</span></td>
+        <td>10:37:05 AM</td>
         <td>
-          <span class='badge white-text red'>Name of the failed test case is: verifyBuyProduct</span>
+          <span class='badge white-text brown'>Name of the skip test case is: verifyUserRegistration</span>
         </td>
       </tr>
   </tbody>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 1, 2023 09:04:13 AM</h3>
+<h3>Jun 25, 2023 10:36:52 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 1, 2023 09:04:37 AM</h3>
+<h3>Jun 25, 2023 10:37:05 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -146,7 +146,7 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Tests Failed</p>
-<h3>1</h3>
+<h3>0</h3>
 </div></div>
 </div>
 </div>
@@ -167,8 +167,8 @@
 </small>
 </div>
 <div>
-<small data-tooltip='100%'><b>1</b> tests failed,
-<b>0</b> skipped, <b data-tooltip='0%'>0</b> others
+<small data-tooltip='0%'><b>0</b> tests failed,
+<b>1</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
 </div>
@@ -187,8 +187,8 @@
 <div class="card-footer">
 <div><small data-tooltip='0%'><b>0</b> events passed</small></div>
 <div>
-<small data-tooltip='100%'><b>1</b> events failed,
-<b data-tooltip='%'>0</b> others
+<small data-tooltip='0%'><b>0</b> events failed,
+<b data-tooltip='%'>1</b> others
 </small>
 </div>
 </div>
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"verifyBuyProduct":0.004
+"verifyUserRegistration":0.01
 };
 </script>
 <div class="row">
@@ -240,9 +240,9 @@ var timeline = {
 var statusGroup = {
 parentCount: 5,
 passParent: 0,
-failParent: 1,
+failParent: 0,
 warningParent: 0,
-skipParent: 0,
+skipParent: 1,
 childCount: 5,
 passChild: 0,
 failChild: 0,
@@ -257,9 +257,9 @@ skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
 passEvents: 0,
-failEvents: 1,
+failEvents: 0,
 warningEvents: 0,
-skipEvents: 0,
+skipEvents: 1,
 infoEvents: 0
 };
 </script>        </div>
