--- a/test-output/old/------Suite=MyStoreV1--------/classes.html
+++ b/test-output/old/------Suite=MyStoreV1--------/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.mystore.testcases.ProductPageTest</td>
+<td>com.mystore.testcases.RegistrationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyBuyProduct</td>
+<td>verifyLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchProduct</td>
+<td>verifyUserRegistration</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
