--- a/test-output/old/------Suite=MyStoreV1--------/methods.html
+++ b/test-output/old/------Suite=MyStoreV1--------/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>------Suite=MyStoreV1--------</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d6578">  <td>23/06/01 09:04:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.mystore.testcases.ProductPageTest@66480dd7]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@367746789</td>   <td></td> </tr>
-<tr bgcolor="af6cff">  <td>23/06/01 09:04:21</td>   <td>8170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.verifyBuyProduct()[pri:0, instance:com.mystore.testcases.ProductPageTest@66480dd7]">verifyBuyProduct</td> 
-  <td>main@367746789</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>23/06/01 09:04:37</td>   <td>23411</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.mystore.testcases.ProductPageTest@66480dd7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@367746789</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>23/06/23 13:18:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.mystore.testcases.RegistrationTest@5ec0a365]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@961712517</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>23/06/23 13:18:13</td>   <td>-32132</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.mystore.testcases.RegistrationTest@5ec0a365]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@961712517</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>23/06/23 13:18:35</td>   <td>-10072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyLogin()[pri:0, instance:com.mystore.testcases.RegistrationTest@5ec0a365]">verifyLogin</td> 
+  <td>main@961712517</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>23/06/23 13:18:24</td>   <td>-21598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.verifyUserRegistration()[pri:0, instance:com.mystore.testcases.RegistrationTest@5ec0a365]">verifyUserRegistration</td> 
+  <td>main@961712517</td>   <td></td> </tr>
 </table>
